chore: New fields in subscription_view
