# priv/static/swagger.json
@@ -452,6 +452,10 @@
           "type": "string",
           "description": "Periodicity of the subscription"
         },
+        "last_consumed_event": {
+          "type": "string",
+          "description": "Timestamps"
+        },
         "id": {
           "type": "integer",
           "description": "Unique identifier"
